Fix: - rimossa la proprità nel tag body del text-align center;

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -9,7 +9,6 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    text-align: center;
 }
 
 img {
